frontmatter fixups post merge

--- a/docs/solana/migration/application-builder.mdx
+++ b/docs/solana/migration/application-builder.mdx
@@ -1,9 +1,11 @@
 ---
 id: application-builder
-hide_title: true
+title: Application Builder Migration
+pagination_label: Application Builder Migration
 sidebar_label: Application Builder Migration
+description: Helium Application Builder Migration Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/application-builder
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
