--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -1,9 +1,11 @@
 ---
 id: exchange
-hide_title: true
+title: Exchange Migration
+pagination_label: Exchange Migration
 sidebar_label: Exchange Migration
+description: Helium Exchange Migration Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/exchange
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
