--- a/docs/solana/migration/governance.mdx
+++ b/docs/solana/migration/governance.mdx
@@ -1,9 +1,11 @@
 ---
 id: governance
-hide_title: true
+title: Governance Migration
+pagination_label: Governance Migration
 sidebar_label: Governance Migration
+description: Helium Governance Migration Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/governance
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
