--- a/docs/solana/migration/hotspot-owner.mdx
+++ b/docs/solana/migration/hotspot-owner.mdx
@@ -1,9 +1,11 @@
 ---
 id: hotspot-owner
-hide_title: true
+title: Hotspot Owner Migration
+pagination_label: Hotspot Owner Migration
 sidebar_label: Hotspot Owner Migration
+description: Helium Hotspot Owner Migration Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/hotspot-owner
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
