--- a/docs/solana/migration/maker.mdx
+++ b/docs/solana/migration/maker.mdx
@@ -1,9 +1,11 @@
 ---
 id: maker
-hide_title: true
+title: Maker Migration
+pagination_label: Maker Migration
 sidebar_label: Maker Migration
+description: Helium Maker Migration Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/maker
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
