--- a/docs/solana/migration/migration-infrastructure.mdx
+++ b/docs/solana/migration/migration-infrastructure.mdx
@@ -3,8 +3,8 @@ id: migration-infrastructure
 title: Solana Infrastructure Migration
 pagination_label: Solana Infrastructure Migration
 sidebar_label: Infrastructure
-description: Helium Solana Migration Documentation
-# Image:
+description: Helium Solana Infrastructure Migration Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/migration-infrastructure
 ---
 
