--- a/docs/solana/migration/network-user.mdx
+++ b/docs/solana/migration/network-user.mdx
@@ -1,9 +1,11 @@
 ---
 id: network-user
-hide_title: true
+title: Network User Migration
+pagination_label: Network User Migration
 sidebar_label: Network User Migration
+description: Helium Network User Migration Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/network-user
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
