--- a/docs/solana/oracle-data.mdx
+++ b/docs/solana/oracle-data.mdx
@@ -1,9 +1,11 @@
 ---
 id: oracle-data
+title: Oracle Data
+pagination_label: Oracle Data
 sidebar_label: Oracle Data
-hide_title: true
+description: Helium Oracle Data Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /solana/oracle-data
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
