--- a/docs/solana/primer.mdx
+++ b/docs/solana/primer.mdx
@@ -1,9 +1,11 @@
 ---
 id: primer
+title: Primer on Solana Programming
+pagination_label: Primer on Solana Programming
 sidebar_label: Primer on Solana Programming
-hide_title: true
+description: Helium Primer on Solana Programming Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /solana/primer
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
