--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -1,9 +1,11 @@
 ---
 id: rewardable-entities
-hide_title: true
+title: Rewardable Entities
+pagination_label: Rewardable Entities
 sidebar_label: Rewardable Entities (Hotspots, Mappers, and more)
+description: Helium Rewardable Entities Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /solana/rewardable-entites
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
