--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -1,9 +1,11 @@
 ---
 id: ledger
-hide_title: true
+title: Ledger Migration
+pagination_label: Ledger Migration
 sidebar_label: Ledger Migration
+description: Helium Ledger Migration Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/ledger
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
