--- a/docs/solana/solana.mdx
+++ b/docs/solana/solana.mdx
@@ -1,9 +1,11 @@
 ---
 id: solana
-hide_title: true
+title: Solana Introduction
+pagination_label: Solana Introduction
 sidebar_label: Introduction
+description: Solana Introduction
+image: https://i.imgur.com/bWAbESE.png
 slug: /solana
-hide_table_of_contents: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -23,8 +25,7 @@ helium is moving to the Solana blockchain.
 
 The following are migration guides for different users of Helium:
 
-- [Hotspot Owner](./solana/migration/hotspot-owner)
-- [Maker](./solana/migration/maker)
+- [Hotspot Owner](./solana/migration/hotspot-owner)- [Maker](./solana/migration/maker)
 - [Exchange](./solana/migration/exchange)
 - [LoRaWAN Network User](./solana/migration/network-user)
 - [Application Builder](./solana/migration/application-builder)
