wrap todos in comment tags
TODOs appear in code, not rendered on site

--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -23,8 +23,6 @@ same as the proceedure for all other Solana SPL Tokens.
 
 All the tokens are on the `TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA` program.
 
-
-// TODO: Mint ids
-
+<!-- TODO: Mint ids -->
 
 These mint IDs exist both on `mainnet-beta` and `devnet`, so you can test.
