--- a/docs/solana/migration/hotspot-owner.mdx
+++ b/docs/solana/migration/hotspot-owner.mdx
@@ -41,4 +41,4 @@ hotspots in your app.
 Because claiming is an explicit action now, you may want to enlist a service to claim rewards on all
 of your hotspots.
 
-// TODO: Service
+<!-- TODO: Service -->
