--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -17,14 +17,15 @@ The documentation on Solana and the upcoming Migration is under development and 
 :::
 
 # Ledger Migration
-// TODO: Nova
 
 To migrate your ledger to the Solana network, you will need to download the latest verion of the Solana
 Ledger Application.
+<!-- TODO: Nova -->
 
 You can then download our migration command line utility via
 
-// TODO:
+<!-- TODO: this command -->
+
 ```bash
 $ 
 ```
