--- a/docs/solana/migration/maker.mdx
+++ b/docs/solana/migration/maker.mdx
@@ -260,7 +260,7 @@ const { pendingAssertTxn, pendingGatewayTxn, pendingTransferTxn, solanaTxnIds } 
 
 # Fetching Hotspots
 
-TODO: Show how this is done
+<!-- TODO: Show how this is done -->
 
 # Update wallet link
 
@@ -310,7 +310,7 @@ const importAccount = useCallback(() => {
 
 ## Data Credits and Sol for Onboarding
 
-// TODO: We need to create an easy way for makers to get sol and data credits into their accounts
+<!-- TODO: We need to create an easy way for makers to get sol and data credits into their accounts -->
 
 ```
 
