--- a/docs/solana/migration/network-user.mdx
+++ b/docs/solana/migration/network-user.mdx
@@ -21,4 +21,4 @@ The documentation on Solana and the upcoming Migration is under development and 
 As a network user, you will not need to do anything during the migration. The network should continue
 to function.
 
-// TODO: Joey, maybe talk about Chirpstack and such?
+<!-- TODO: Joey, maybe talk about Chirpstack and such? -->
