--- a/docs/solana/oracle-data.mdx
+++ b/docs/solana/oracle-data.mdx
@@ -18,4 +18,4 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 # Oracle Data
 
-// TODO: s3 access, etc.
+<!-- TODO: s3 access, etc. -->
