--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -166,8 +166,7 @@ const asset = await getAsset(rpcUrl, assetId)
 
 ## Transferring Rewardable Entities
 
- // TODO. Peroni should have some example code in the wallet app. It's a vanilla bubblegum transfer.
-
+<!-- TODO: Peroni should have some example code in the wallet app. It's a vanilla bubblegum transfer. -->
 
 ## Onboarding Rewardable Entities
 
@@ -189,7 +188,7 @@ The following test shows the full flow of onboarding a hotspot using the onboard
 The [React Native Helium](https://github.com/helium/react-native-helium) SDK should greatly simplify
 this process. 
 
-// TODO: Add examples for the maker SDK (really, throughout this doc)
+<!-- TODO: Add examples for the maker SDK (really, throughout this doc) -->
 
 <!-- prettier-ignore -->
 ```js
