--- a/docs/solana/solana.mdx
+++ b/docs/solana/solana.mdx
@@ -68,4 +68,4 @@ These contracts (TODO: Not yet, when it's done link to audit report) have been a
 
 ## Important Addresses and Links
 
-// TODO: Get final mint addresses of hnt, mobile, etc. Links to realms.
+<!-- TODO: Get final mint addresses of hnt, mobile, etc. Links to realms. -->
