line space and white space

--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -18,8 +18,8 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 # Exchange Migration
 
-Helium will be transitioning from its own L1 to Solana. The proceedure for Helium should be the
-same as the proceedure for all other Solana SPL Tokens.
+Helium will be transitioning from its own L1 to Solana. The proceedure for Helium should be the same
+as the proceedure for all other Solana SPL Tokens.
 
 All the tokens are on the `TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA` program.
 
