--- a/docs/solana/migration/hotspot-owner.mdx
+++ b/docs/solana/migration/hotspot-owner.mdx
@@ -18,25 +18,25 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 # Hotspot Owner Migration
 
-As a hotspot owner, you will not need to do anything for the migration. You do not need to power your
-Hotspot off, you can leave it on and we'll do the rest!
+As a hotspot owner, you will not need to do anything for the migration. You do not need to power
+your Hotspot off, you can leave it on and we'll do the rest!
 
 If you use the Helium Wallet App (Black App), you will see it enter a "transitioning" state during
-the 24 hour downtime of the migration. Once the transition is over, you can open the app again,
-and after a minute or so you should see all of your assets and hotspots.
+the 24 hour downtime of the migration. Once the transition is over, you can open the app again, and
+after a minute or so you should see all of your assets and hotspots.
 
 ## Reward Distribution
 
 If you own a LoRaWAN hotspot, you will now receive IOT tokens as mining rewards instead of HNT.
 
-On Solana, rewards accumulate to the hotspot and must be claimed. You can claim as often as you would
-like, keeping in mind that for every claim you pay a small transaction fee in SOL, that as of writing
-this is a fraction of a cent.
+On Solana, rewards accumulate to the hotspot and must be claimed. You can claim as often as you
+would like, keeping in mind that for every claim you pay a small transaction fee in SOL, that as of
+writing this is a fraction of a cent.
 
 ## Hotspot owners with 50+ hotspots
 
 If you own a large number of hotspots, it may take up to 48 hours after the migration to see all
-hotspots in your app. 
+hotspots in your app.
 
 Because claiming is an explicit action now, you may want to enlist a service to claim rewards on all
 of your hotspots.
