--- a/docs/solana/migration/network-user.mdx
+++ b/docs/solana/migration/network-user.mdx
@@ -18,7 +18,7 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 # Network User Migration
 
-As a network user, you will not need to do anything during the migration. The network should continue
-to function.
+As a network user, you will not need to do anything during the migration. The network should
+continue to function.
 
 <!-- TODO: Joey, maybe talk about Chirpstack and such? -->
