--- a/docs/solana/migration/application-builder.mdx
+++ b/docs/solana/migration/application-builder.mdx
@@ -18,9 +18,10 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 # Application Builder Migration
 
-As an application builder on top of Helium, many of the APIs and interfaces are changing. 
+As an application builder on top of Helium, many of the APIs and interfaces are changing.
 
-If you are building against hotspots, token accounts, or anything blockchain related, you should start with
-the [Primer on Solana](/solana/primer) and continue through the solana docs.
+If you are building against hotspots, token accounts, or anything blockchain related, you should
+start with the [Primer on Solana](/solana/primer) and continue through the solana docs.
 
-If you are building against the Proof of Coverage datasets, you should read through [Oracle Data](/solana/oracle-data)
+If you are building against the Proof of Coverage datasets, you should read through
+[Oracle Data](/solana/oracle-data)
