--- a/docs/solana/migration/governance.mdx
+++ b/docs/solana/migration/governance.mdx
@@ -18,15 +18,18 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 # Governance Migration
 
-After the migration, [Helium Vote](https://helium.vote) will transition to using Solana SPL Governance Realms.
+After the migration, [Helium Vote](https://helium.vote) will transition to using Solana SPL
+Governance Realms.
 
 While the user interface will change, the governance process will remain mostly the same.
 
-Using the Helium Black Wallet App, you will be able to use an embedded browser to visit helium.vote, connect your wallet, and vote yes/no 
-on proposals. If you have a Ledger, or any other Solana wallet, you can navigate to the website, connect your wallet, and vote.
+Using the Helium Black Wallet App, you will be able to use an embedded browser to visit helium.vote,
+connect your wallet, and vote yes/no on proposals. If you have a Ledger, or any other Solana wallet,
+you can navigate to the website, connect your wallet, and vote.
 
 ## Governance Changes
 
-The major change with Solana governance is that more of the helium network can be governed by the DAO.
+The major change with Solana governance is that more of the helium network can be governed by the
+DAO.
 
 Everything from Program (smart contract) changes to approving makers can now controlled by the DAO.
