--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -18,22 +18,23 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 # Ledger Migration
 
-To migrate your ledger to the Solana network, you will need to download the latest verion of the Solana
-Ledger Application.
 <!-- TODO: Nova -->
+
+To migrate your ledger to the Solana network, you will need to download the latest verion of the
+Solana Ledger Application.
 
 You can then download our migration command line utility via
 
 <!-- TODO: this command -->
 
 ```bash
-$ 
+$
 ```
 
 Then migrate the wallet using
 
 ```bash
-$ 
+$
 ```
 
 ## Derivation Paths and your new Public Key
@@ -43,5 +44,5 @@ The Helium Ledger App uses ED25519 keys, similarly to Solana, but at a different
 This means that, while your seed phrase is the same, your private keys are different on Solana.
 
 In order to get around this, when you run the migration, the migration application will ask you to
-use the old derivation path to approve sending all of your hotspots, tokens, etc to the new derivation
-path.
+use the old derivation path to approve sending all of your hotspots, tokens, etc to the new
+derivation path.
