--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -18,29 +18,32 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 # Rewardable Entities (Hotspots, Mappers, and more)
 
-Following the transition to Solana, all actors in the network that receive tokens are considered "Rewardable Entities."
+Following the transition to Solana, all actors in the network that receive tokens are considered
+"Rewardable Entities."
 
-While, as of writing this document, hotspots are the only rewardable entity, this will change with the addition of mappers and other rewardable categories.
+While, as of writing this document, hotspots are the only rewardable entity, this will change with
+the addition of mappers and other rewardable categories.
 
 A rewardable entity on the Helium Network is represented on Solana as an NFT (Non-Fungible Token).
 
-NFTs are ideal for this job as the represent ownership in a way that is easily transferrable and recognized
-by all major wallets. Open your wallet, and see all of your hotspots inside. 
-
+NFTs are ideal for this job as the represent ownership in a way that is easily transferrable and
+recognized by all major wallets. Open your wallet, and see all of your hotspots inside.
 
 ## Compression NFTs
 
-A new developmenet on the Solana Blockchain has been [Compression NFTs](https://www.metaplex.com/posts/expanding-digital-assets-with-compression-for-nfts).
+A new developmenet on the Solana Blockchain has been
+[Compression NFTs](https://www.metaplex.com/posts/expanding-digital-assets-with-compression-for-nfts).
 
-With normal NFTs on Solana, each token is stored on chain as a distinct spl-token mint, with decimals of 0
-and supply of 1. This mint has some metadata attached to it, as well as a token account representing the ownership
-of the token. In total this leads to 4 accounts with a cost of 0.01197616 SOL in rent. Multiplying this by
-millions of hotspots leads to not only a high cost, but also a large usage of storage space on the blockchain. 
+With normal NFTs on Solana, each token is stored on chain as a distinct spl-token mint, with
+decimals of 0 and supply of 1. This mint has some metadata attached to it, as well as a token
+account representing the ownership of the token. In total this leads to 4 accounts with a cost of
+0.01197616 SOL in rent. Multiplying this by millions of hotspots leads to not only a high cost, but
+also a large usage of storage space on the blockchain.
 
 Enter: Compression NFTs. Compression NFTs use a Concurrent Merkle Tree to compress millions of NFTs
-into one 32 byte hash. Clients executing transactions on compressed NFTs are able to send a cryptograpic
-proof to the blockchain that verifies the NFT and ownership. In other words, instead of sending a transaction with:
-
+into one 32 byte hash. Clients executing transactions on compressed NFTs are able to send a
+cryptograpic proof to the blockchain that verifies the NFT and ownership. In other words, instead of
+sending a transaction with:
 
 ```rust
 
@@ -62,7 +65,7 @@ You can instead send:
 ```rust
 
 pub struct ProofArgs {
-  pub hash: Vec<u8>, // The 32 byte hash of the NFT 
+  pub hash: Vec<u8>, // The 32 byte hash of the NFT
   pub root: [u8; 32], // The root of the merkle tree
   pub index: u32, // The index of the item in the tree
   pub proof: Vec<Vec<u8>> // An array of 32 byte proofs proving that the `hash` is part of the `root`
@@ -80,14 +83,14 @@ While this may look difficult, this is all neatly packed in the Metaplex Digital
 
 This API runs on multiple RPC providers, and allows you to hit convenient functions like
 
-`get_assets_by_owner` and `get_asset_proof` so that you never have to worry about the underlying concurrent merkle algorithm.
-
+`get_assets_by_owner` and `get_asset_proof` so that you never have to worry about the underlying
+concurrent merkle algorithm.
 
 ## Fetching Rewardable Entities.
 
-All rewardable entities are created by the `helium-entity-manager` program. Further,
-they exist under a collection that is managed by the Maker of that entity. The easiest way to fetch
-all helium entities for a given wallet is to filter by the `helium-entity-manager-creator`
+All rewardable entities are created by the `helium-entity-manager` program. Further, they exist
+under a collection that is managed by the Maker of that entity. The easiest way to fetch all helium
+entities for a given wallet is to filter by the `helium-entity-manager-creator`
 
 We can get this address by running
 
@@ -101,7 +104,8 @@ const creator = entityCreatorKey(hntMint)[0]
 
 This should output: `9XtEZRnuWizL8vGoNwRX636guuSXTjQvsf3wAXmH4C1b`
 
-Now, we can use the metaplex digital asset api to get rewardable entities my wallet (`BcJzP2hEYgzjUwpHEtS6RhuqGfEJVx8Rq3MejujAAWrR`) owns:
+Now, we can use the metaplex digital asset api to get rewardable entities my wallet
+(`BcJzP2hEYgzjUwpHEtS6RhuqGfEJVx8Rq3MejujAAWrR`) owns:
 
 ```bash
 curl --request POST \
@@ -125,11 +129,13 @@ curl --request POST \
 
 Hotspots on the helium network currently are uniquely identified by their ECC Compact Public Keys
 
-At onboarding time, hotspots are able to sign an onboard transaction proving physical ownership of the device.
+At onboarding time, hotspots are able to sign an onboard transaction proving physical ownership of
+the device.
 
 As such, the Helium Solana implementation enforces that all NFTs are unique by ECC Compact keys.
 
-If you have an asset id of an NFT on Solana, you can get the ECC Compact Key by fetching the digital asset and pulling out the last value from the content.json_uri.
+If you have an asset id of an NFT on Solana, you can get the ECC Compact Key by fetching the digital
+asset and pulling out the last value from the content.json_uri.
 
 For example:
 
@@ -140,7 +146,8 @@ const asset = await getAsset(rpcUrl, new PublicKey("...asset id..."));
 const eccCompactKey = asset.content.json_uri.split("/").slice(-1)[0];
 ```
 
-If you have only an ECC Compact key and would like to find the NFT, you can use the `KeyToAssetV0` struct that is stored on chain:
+If you have only an ECC Compact key and would like to find the NFT, you can use the `KeyToAssetV0`
+struct that is stored on chain:
 
 <!-- prettier-ignore -->
 ```js
@@ -171,22 +178,23 @@ const asset = await getAsset(rpcUrl, assetId)
 ## Onboarding Rewardable Entities
 
 The onboarding flow for an entity is general that a customer purchases the hardware from a maker,
-and then self-onboards to the network. Because all hardware are created by approved makers, the onboard
-transaction must be approved by the maker. This uses a similar flow to the legacy onboarding-server of the 
-helium blockchain.
+and then self-onboards to the network. Because all hardware are created by approved makers, the
+onboard transaction must be approved by the maker. This uses a similar flow to the legacy
+onboarding-server of the helium blockchain.
 
-The main difference between the Solana version of Helium, and the legacy version on the helium chain, is that
-onboarding is on a per-network basis. A hotspot can be an IOT hotspot, a MOBILE hotspot, or both. 
-If the hotspot wants to earn both MOBILE and IOT rewards, it must onboard to the IOT network AND the MOBILE network. 
-It must also assert location in both.
+The main difference between the Solana version of Helium, and the legacy version on the helium
+chain, is that onboarding is on a per-network basis. A hotspot can be an IOT hotspot, a MOBILE
+hotspot, or both. If the hotspot wants to earn both MOBILE and IOT rewards, it must onboard to the
+IOT network AND the MOBILE network. It must also assert location in both.
 
-Similarly, makers are approved for specific subnetworks. A maker that creates IOT hotspots can not necessarily onboard
-MOBILE hotspots. Each network subdao must approve makers to issue rewardable entities.
+Similarly, makers are approved for specific subnetworks. A maker that creates IOT hotspots can not
+necessarily onboard MOBILE hotspots. Each network subdao must approve makers to issue rewardable
+entities.
 
 The following test shows the full flow of onboarding a hotspot using the onboarding server.
 
 The [React Native Helium](https://github.com/helium/react-native-helium) SDK should greatly simplify
-this process. 
+this process.
 
 <!-- TODO: Add examples for the maker SDK (really, throughout this doc) -->
 
@@ -304,7 +312,7 @@ describe("onboarding server", () => {
         await sleep(2000); // Wait for hotspot to be indexed into asset api
       }
     }
-    
+
 
     for (const solanaTransaction of onboardResult!.data.data
       .solanaTransactions) {
@@ -349,32 +357,35 @@ describe("onboarding server", () => {
 
 ## Claiming Rewards on Rewardable Entities
 
-A system of oracles keep track of the rewards owed to each Rewardable Entity. For example, in the IOT
-network there are oracles that keep track of the IOT tokens earned by each hotspot for PoC.
+A system of oracles keep track of the rewards owed to each Rewardable Entity. For example, in the
+IOT network there are oracles that keep track of the IOT tokens earned by each hotspot for PoC.
 
-These oracles are responsible ONLY for tracking the total lifetime rewards associated with a hotspot.
-This frees the oracles from any kind of dependence on the blockchain. They don't care about the issuance
-or movement of tokens. 
+These oracles are responsible ONLY for tracking the total lifetime rewards associated with a
+hotspot. This frees the oracles from any kind of dependence on the blockchain. They don't care about
+the issuance or movement of tokens.
 
-The `lazy-distributor` program keeps track of, for each hotspot, how much of the total lifetime rewards
-have been claimed. Claiming rewards, then, consists of two steps:
+The `lazy-distributor` program keeps track of, for each hotspot, how much of the total lifetime
+rewards have been claimed. Claiming rewards, then, consists of two steps:
 
 1. Ask oracles to update the on-chain state to reflect the latest lifetime rewards for this hotspot
-2. Issue the difference between the total lifetime rewards and total claimed rewards to the hotspot owner.
+2. Issue the difference between the total lifetime rewards and total claimed rewards to the hotspot
+   owner.
 
-In practice, we have made it so that this can all happen in a singular transaction. 
+In practice, we have made it so that this can all happen in a singular transaction.
 
 ### Finding current rewards
 
 Oracles work off of a restful API that involves
 
-  1. Grabbing lifetime rewards for all oracles
-  2. Constructing a transaction to set the rewards, and passing the transaction to each oracle to partially sign.
-  3. Submitting the fully signed transaction to Solana.
+1. Grabbing lifetime rewards for all oracles
+2. Constructing a transaction to set the rewards, and passing the transaction to each oracle to
+   partially sign.
+3. Submitting the fully signed transaction to Solana.
 
 The SDK simplifies this process into two functions, `getCurrentRewards` and `formTransaction`.
 
-If you have interst in using the REST api, you can see the relatively simple client code [here](https://github.com/helium/helium-program-library/blob/master/packages/distributor-oracle/src/client.ts)
+If you have interst in using the REST api, you can see the relatively simple client code
+[here](https://github.com/helium/helium-program-library/blob/master/packages/distributor-oracle/src/client.ts)
 
 To fetch rewards across all oracles for a given asset id:
 
@@ -417,4 +428,3 @@ const tx = await formTransaction({
 
 await provider.send(tx)
 ```
-
