reorganize images, favor mermaid diagrams, image optimizer

--- a/docs/solana/migration/migration-infrastructure.mdx
+++ b/docs/solana/migration/migration-infrastructure.mdx
@@ -64,7 +64,7 @@ potential bad actors.
 An out-of-the-box Oracle solution means fewer developer requirements for the Helium core developers
 and ensures more reliable service.
 
-<img src={useBaseUrl('img/solana-migration/price-oracle.png')} />
+<!-- <img src={useBaseUrl('img/solana/price-oracle.png')} /> -->
 
 ```mermaid
 %%{ init: { 'flowchart': { 'curve': 'linear' } } }%%
@@ -140,7 +140,7 @@ The Packet Verifier verifies the submitted packets. Its primary responsibilities
 - Based on data transfer, calculate Rewards and the amount of DC to debit from each wallet
   associated with an OUI.
 
-<img src={useBaseUrl('img/solana-migration/packet-verifier-service.png')} />
+<!-- <img src={useBaseUrl('img/solana/packet-verifier-service.png')} /> -->
 
 ```mermaid
 flowchart TB;
@@ -224,7 +224,7 @@ The PoC Verifier Oracle will verify all the data submitted by correlating witnes
 confirming the series of events, then submitting these processed rewardable and invalid receipts to
 a separate S3 bucket, including how many shares to give to each Hotspot.
 
-<img src={useBaseUrl('img/solana-migration/poc-verifier-oracle.png')} />
+<!-- <img src={useBaseUrl('img/solana/poc-verifier-oracle.png')} /> -->
 
 ```mermaid
 flowchart TB;
@@ -277,7 +277,7 @@ to MOBILE PoC. You can read this
 [roadmap](https://blog.helium.com/mobile-proof-of-coverage-the-road-ahead-73a25601a13d) to learn
 more about these plans.
 
-<img src={useBaseUrl('img/solana-migration/mobile-poc-oracle.png')} />
+<!-- <img src={useBaseUrl('img/solana/mobile-poc-oracle.png')} /> -->
 
 ```mermaid
 flowchart LR;
@@ -350,7 +350,7 @@ DC burned, active device count, and veHNT staked are submitted to the chain thro
 Device count is a fluctuating number based on recent PoC activity and is not readily available
 on-chain; a dedicated Oracle will submit device count to the blockchain via Switchboard.
 
-<img src={useBaseUrl('img/solana-migration/subdao-hnt-exchange.png')} />
+<!-- <img src={useBaseUrl('img/solana/subdao-hnt-exchange.png')} /> -->
 
 ```mermaid
 %%{ init: { 'flowchart': { 'curve': 'linear' } } }%%
