--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -1,8 +1,8 @@
 ---
 id: devices
-title: Devices
-pagination_label: Devices
-sidebar_label: Devices
+title: Helium Devices
+pagination_label: Helium Devices
+sidebar_label: Helium Devices
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network/devices
