--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -1,9 +1,9 @@
 ---
 id: use-the-network
-title: Use the Network
-pagination_label: Use the Helium Network
-sidebar_label: Use the Helium Network
-description: Use the Helium Network
+title: Use the Helium IOT Network
+pagination_label: Use the IOT Network
+sidebar_label: Introduction
+description: Use the IOT Network
 image: https://i.imgur.com/bWAbESE.png
 slug: /use-the-network
 ---
