url slug fixups, comment-ify todos

--- a/docs/faq/privacy.mdx
+++ b/docs/faq/privacy.mdx
@@ -5,7 +5,7 @@ pagination_label: Privacy Policy
 sidebar_label: Privacy Policy
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
-slug: /use-the-network/policies/privacy
+slug: /faq/privacy
 ---
 
 # Privacy Policy
