--- a/docs/faq/terms.mdx
+++ b/docs/faq/terms.mdx
@@ -5,7 +5,7 @@ pagination_label: Terms Of Service
 sidebar_label: Terms Of Service
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
-slug: /use-the-network/policies/terms
+slug: /faq/terms
 ---
 
 # Terms of Service
