--- a/docs/hotspot-makers/maker-ethics.mdx
+++ b/docs/hotspot-makers/maker-ethics.mdx
@@ -10,7 +10,7 @@ slug: /hotspot-makers/maker-ethics
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-TODO: voice and grammar checks
+<!-- TODO: voice and grammar checks -->
 
 # Maker Ethics
 
