--- a/docs/faq/build-on-network.mdx
+++ b/docs/faq/build-on-network.mdx
@@ -16,14 +16,14 @@ Thanks for your interest! Join the [community Discord server](https://discord.gg
 are several channels dedicated to development. There’s also
 [extensive documentation on using the Network](/use-the-network).
 
-TODO: clean up links
+<!-- TODO: clean up links -->
 
 ## Can end devices communicate directly with each other or do they have to hop over the Helium Hotspot?
 
 All compatible devices communicate via Hotspots. There is no direct communication or meshing in the
 Helium Network.
 
-TODO: hotspot to hotspot communication is wallet to wallet
+<!-- TODO: hotspot to hotspot communication is wallet to wallet -->
 
 ## Will Helium be proprietary?
 
@@ -37,4 +37,4 @@ Applications that are suitable for the Helium Network send small amounts of data
 possible is around 5kbits per second. But this is rarely seen in production. Typically sensors are
 sending 10-1000 bytes at a time.
 
-TODO: this whole page belongs with other stuff more specific to its indivudual context
+<!-- TODO: this whole page belongs with other stuff more specific to its indivudual context -->
