--- a/docs/hotspot-makers/hotspot-manufacturers.mdx
+++ b/docs/hotspot-makers/hotspot-manufacturers.mdx
@@ -11,20 +11,19 @@ Nova Labs (formerly Helium Systems, Inc.) manufactured the first set of Hotspots
 (These are often referred to as "OGs."). Nova Labs no longer manufacturers Hotspots, but there is
 now an extensive list of approved manufacturers (known in the community as "Makers")
 
+<!-- TODO: section in docs for Manufacturing topics - migrate from google docs and notion -->
 
-TODO: section in docs for Manufacturing topics - migrate from google docs and notion
-
-TODO: links to ethics docs
+<!-- TODO: links to ethics docs -->
 
 - All approved Hotspots can be found [here](/mine-hnt).
 
-TODO: check this link 👆, likely in notion, should pull into docs
+<!-- TODO: check this link 👆, likely in notion, should pull into docs -->
 
-TODO: every product is approved, not every Maker
+<!-- TODO: every product is approved, not every Maker -->
 
-TODO: merge man docs with maker apps list
+<!-- TODO: merge man docs with maker apps list -->
 
-TODO: merge manufacturer docs with maker apps list
+<!-- TODO: merge manufacturer docs with maker apps list -->
 
 :::caution Be Careful
 
