--- a/docs/faq/open-source.mdx
+++ b/docs/faq/open-source.mdx
@@ -83,12 +83,10 @@ that makes it possible.
 - [Helium Docs](https://github.com/helium/docs) - Docusaurus-based docs for all things Helium.
   (You're reading them.)
 
-<<<<<<< HEAD:docs/faq/open-source.mdx
-
 - # [Helium IOT Mappers](https://github.com/helium/mappers/) - Community generated coverage map of the
 
-  - [Installation](/open-source/docs-installation) - How to install the needed components to start
-    helping docs development.
+  - [Installation](/faq/docs-installation) - How to install the needed components to start helping
+    docs development.
 
 - [Helium Mappers](https://github.com/helium/mappers/) - Community generated coverage map of the
-  > > > > > > > master:docs/open-source/open-source.mdx Helium network using real-world testing.
+  Helium network using real-world testing.
