--- a/docs/hotspot-makers/hotspot-manufacturers.mdx
+++ b/docs/hotspot-makers/hotspot-manufacturers.mdx
@@ -1,7 +1,10 @@
 ---
 id: hotspot-manufacturers
 title: Approved Hotspot Manufacturers FAQ
+pagination_label: Approved Hotspot Manufacturers FAQ
 sidebar_label: Approved Hotspot Manufacturers
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /hotspot-makers/hotspot-manufacturers
 ---
 
