--- a/docs/hotspot-makers/maker-ethics.mdx
+++ b/docs/hotspot-makers/maker-ethics.mdx
@@ -4,7 +4,7 @@ title: Maker Ethics
 pagination_label: Maker Ethics
 sidebar_label: Maker Ethics
 description: Maker Ethics
-# Image:
+image: https://i.imgur.com/bWAbESE.png
 slug: /hotspot-makers/maker-ethics
 ---
 
