--- a/docs/hotspot-makers/original-helium-hotspot.mdx
+++ b/docs/hotspot-makers/original-helium-hotspot.mdx
@@ -4,7 +4,7 @@ title: Original Helium Hotspots
 pagination_label: Original Helium Hotspots
 sidebar_label: Original Helium Hotspots
 description: Original Helium Hotspots
-# Image:
+image: https://i.imgur.com/bWAbESE.png
 slug: /hotspot-makers/original-helium-hotspot
 ---
 
