--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -5,7 +5,7 @@ pagination_label: Maker Apps
 sidebar_label: Maker Apps
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
-slug: /mine-hnt/maker-apps
+slug: /hotspot-makers/maker-apps
 ---
 
 # Maker Apps
