Update maker-apps.mdx (#1083)
* Update maker-apps.mdx

Added a line saying new makers must have Maker App available before HIP19 approval

* word wrap was funky

---------

Co-authored-by: Sam Gutentag <developer@samgutentag.com>

--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -93,6 +93,8 @@ the unofficial Helium Hotspot Utility from Kent Williams is available.
 
 **The Helium Foundation is neither responsible for nor manages the status of Maker Apps.**
 
+New makers are required to have a Maker App available before HIP 19 maker approval.
+
 :::
 
 ### Aitek
