Add exchange docs

--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -23,6 +23,40 @@ as the proceedure for all other Solana SPL Tokens.
 
 All the tokens are on the `TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA` program.
 
-<!-- TODO: Mint ids -->
+The mint IDs are as follows:
+
+| Name | ID |
+|------|----|
+| HNT | hntv1Vf5ZBG777xAHqHUTFS8UZBTNUN22MBnYramPFk |
+| MOBILE | mb1eaxqRn3VMUuA9MC1hXiNFG7hnJHfF8Cvq7vfYH4y |
+| IOT | iotfeTXUVZKZvmFCTTHrgmep94seQJurjvMgKuqpHyx |
+| DC | dc5Zu977Zan2BFt7iLxCCUoyPvxpxZGYK23d6GYZXq7 |
 
 These mint IDs exist both on `mainnet-beta` and `devnet`, so you can test.
+
+## Wallet Migration
+
+To migrate wallet(s) to Solana, you can use the migration service. Instead of sending all transactions
+to inflate helium state on Solana during the transition period, transactions are instead processed as needed.
+When a user opens their wallet in the helium wallet app, it requests our migration service to get the
+needed transactions, then submits them to Solana.
+
+Since exchange wallets may not use the wallet app, you can use the service directly:
+
+For devnet:
+
+https://migration.web.test-helium.com/migrate/<solana-wallet-address>?limit=1000&offset=0
+
+This will get the list of serialized transactions, which should be sent to Solana.
+
+To get the Solana wallet address from a helium wallet address, call:
+
+https://migration.web.test-helium.com/helium/<helium-wallet-address>
+
+You can also use our command line utility from [here](https://github.com/helium/helium-program-library/releases/tag/v0.0.27-migration-cli)
+
+```
+$ env MIGRATION_SERVICE_URL=https://migration.web.test-helium.com env SOLANA_URL=https://api.devnet.solana.com env SOLANA_WSS_URL=wss://api.devnet.solana.com ./migration-tx-executor --wallet <your-solana-wallet>
+```
+
+You can see typescript code demonstrating how to use this [here](https://github.com/helium/helium-program-library/blob/master/packages/migration-service/src/test-submit.ts#L37)
