--- a/docs/mine-hnt/helium-hotspot-app.mdx
+++ b/docs/mine-hnt/helium-hotspot-app.mdx
@@ -1,6 +1,6 @@
 ---
 id: helium-hotspot-app
-title: Helium Hotspot App (Is Being Depreciated)
+title: Helium Hotspot App (Is Being Deprecated)
 pagination_label: Helium Hotspot App
 sidebar_label: 🚫 Helium Hotspot App 🚫
 description: Helium Documentation
