Fix other deprecated typo

--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -103,7 +103,7 @@ Some users may know "the Helium app" as the "Helium Hotspot App" or "the blue ap
 
 The existing Helium Hotspot app will be restricted to only the management of Original Helium
 Hotspots. Read more about this upcomging change on the
-[Helium Hotspot App (is Being Depreciated)](/mine-hnt/helium-hotspot-app) page.
+[Helium Hotspot App (is Being Deprecated)](/mine-hnt/helium-hotspot-app) page.
 
 :::
 
