--- a/docs/solana/solana.mdx
+++ b/docs/solana/solana.mdx
@@ -26,7 +26,8 @@ helium is moving to the Solana blockchain.
 
 The following are migration guides for different users of Helium:
 
-- [Hotspot Owner](./solana/migration/hotspot-owner)- [Maker](./solana/migration/maker)
+- [Hotspot Owner](./solana/migration/hotspot-owner)
+- [Maker](./solana/migration/maker)
 - [Exchange](./solana/migration/exchange)
 - [LoRaWAN Network User](./solana/migration/network-user)
 - [Application Builder](./solana/migration/application-builder)
