--- a/docs/solana/solana.mdx
+++ b/docs/solana/solana.mdx
@@ -70,4 +70,13 @@ These contracts (TODO: Not yet, when it's done link to audit report) have been a
 
 ## Important Addresses and Links
 
-<!-- TODO: Get final mint addresses of hnt, mobile, etc. Links to realms. -->
+All the tokens are on the `TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA` program.
+
+The mint IDs are as follows:
+
+| Name | ID |
+|------|----|
+| HNT | hntyVP6YFm1Hg25TN9WGLqM12b8TQmcknKrdu1oxWux |
+| MOBILE | mb1eu7TzEc71KxDpsmsKoucSSuuoGLv1drys1oP2jh6 |
+| IOT | iotEVVZLEywoTn1QdwNPddxPWszn3zFhEot3MfL9fns |
+| DC | dcuc8Amr83Wz27ZkQ2K9NS6r8zRpf1J6cvArEBDZDmm |
