split infrastructue doc into sections, frontamatter cleanup

--- a/docs/solana/migration/maker.mdx
+++ b/docs/solana/migration/maker.mdx
@@ -1,6 +1,6 @@
 ---
 id: maker
-title: Maker Migration
+title: Maker App 2.0 Upgrade Guide
 pagination_label: Maker Migration
 sidebar_label: Maker Migration
 description: Helium Maker Migration Documentation
@@ -16,9 +16,7 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 :::
 
-# Maker App 2.0 Upgrade Guide
-
-# Update and add new dependencies
+## Update and add new dependencies
 
 ```json
 "@helium/address": "^4.8.1",
