--- a/docs/solana/migration/network-user.mdx
+++ b/docs/solana/migration/network-user.mdx
@@ -6,6 +6,7 @@ sidebar_label: Network User Migration
 description: Helium Network User Migration Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/network-user
+draft: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -15,8 +16,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 The documentation on Solana and the upcoming Migration is under development and subject to change.
 
 :::
-
-# Network User Migration
 
 As a network user, you will not need to do anything during the migration. The network should
 continue to function.
