--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -2,7 +2,7 @@
 id: rewardable-entities
 title: Rewardable Entities
 pagination_label: Rewardable Entities
-sidebar_label: Rewardable Entities (Hotspots, Mappers, and more)
+sidebar_label: Rewardable Entities
 description: Helium Rewardable Entities Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /solana/rewardable-entites
@@ -15,8 +15,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 The documentation on Solana and the upcoming Migration is under development and subject to change.
 
 :::
-
-# Rewardable Entities (Hotspots, Mappers, and more)
 
 Following the transition to Solana, all actors in the network that receive tokens are considered
 "Rewardable Entities."
