--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -6,6 +6,7 @@ sidebar_label: Ledger Migration
 description: Helium Ledger Migration Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration/ledger
+draft: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -15,8 +16,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 The documentation on Solana and the upcoming Migration is under development and subject to change.
 
 :::
-
-# Ledger Migration
 
 <!-- TODO: Nova -->
 
