removing draft tag, link to solana docs

--- a/docs/solana/migration/application-builder.mdx
+++ b/docs/solana/migration/application-builder.mdx
@@ -18,8 +18,9 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 As an application builder on top of Helium, many of the APIs and interfaces are changing.
 
-If you are building against hotspots, token accounts, or anything blockchain related, you should
-start with the [Primer on Solana](/solana/primer) and continue through the solana docs.
+If you are building against Hotspots, token accounts, or anything blockchain related, you should
+start with the [Primer on Solana](/solana/primer) and continue through the
+[Solana docs](https://docs.solana.com/).
 
-If you are building against the Proof of Coverage datasets, you should read through
-[Oracle Data](/solana/oracle-data)
+<!--TODO: uncomment this once oracle data page has content  -->
+<!-- If you are building against the Proof of Coverage datasets, you should read through [Oracle Data](/solana/oracle-data) -->
