Apply suggestions from code review
Co-authored-by: Abhay Kumar <75+abhay@users.noreply.github.com>

--- a/docs/oracles/data-transfer-oracles.mdx
+++ b/docs/oracles/data-transfer-oracles.mdx
@@ -19,13 +19,13 @@ The documentation on Solana and the upcoming Migration is under development and 
 Moving the entire data transfer logic off-chain will increase scalability and reduce points of
 failure.
 
-## Lorawan Network Server Streamlining
+## LoRaWAN Network Server Streamlining
 
 On the Helium L1, being a LoRaWAN Network Server (LNS) on the Helium Network requires running the
 router, [state channels](/blockchain/packet-purchasing/#state-channels), and the Helium chain, a
 significant hurdle for non-blockchain native LNS configurations.
 
-On the Solana L1, the LNS will have a much-reduced role. After purchasing their Organizationally
+On the Solana L1, the LNS will have a focused role. After purchasing their Organizationally
 Unique Identifier (OUI) and slabs, they must inform the Config Service of the routing for the
 devices under their network. The LNS can optionally curate an allow-list to, for example, not accept
 packets from disabled devices or tenants/devices with a depleted Data Credit (DC) balance. The LNS
