--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -74,5 +74,5 @@ We can see one such transaction here:
 https://explorer.solana.com/tx/5Y8vfMAfhyqgXsp1YnvPVHMdK4PUryLqMCgGynQXg9tPkUVehK438XviXz3ciSkg4PhqMZ8UyrSSVj7pgY8uq1xr?cluster=devnet
 
 If you would like a copy of the database serving the proofs for the migration service, please
-contact the helium foundation. You can then run your own instance of the
+[contact the Helium Foundation](hello@helium.foundation). You can then run your own instance of the
 [migration service](https://github.com/helium/helium-program-library/tree/master/packages/migration-service)
