--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -34,10 +34,59 @@ These mint IDs exist both on `mainnet-beta` and `devnet`, so you can test.
 
 ## Wallet Migration
 
-To migrate wallet(s) to Solana, you can use the migration service. Instead of sending all
-transactions to inflate helium state on Solana during the transition period, transactions are
-instead processed as needed. When a user opens their wallet in the helium wallet app, it requests
-our migration service to get the needed transactions, then submits them to Solana.
+### Mapping Helium Wallets to Solana Wallets
+
+Helium wallets use the same ED25519 curve as Solana wallets. This means that helium public keys
+and secret keys can be mapped directly to a Solana based wallet. 
+
+To get the Solana public key equivalent of a helium public key, in javascript you can run:
+
+```javascript
+import Address from "@helium/address";
+import { PublicKey } from "@solana/web3.js"
+
+const addr = Address.fromB58("...helium pubkey...");
+
+
+// Gets the solana pubkey
+new PublicKey(addr.publicKey).toBase58()
+```
+
+To get a Solana equivalent `Keypair` from a helium `Keypair`:
+
+```javascript
+import { Keypair } from "@helium/crypto";
+import { Keypair as SolanaKeypair } from "@solana/web3.js"
+
+
+const solanaKeypair = SolanaKeypair.fromSecretKey(me.privateKey);
+```
+
+In rust, to get a pubkey:
+
+```rust
+let helium_pubkey_bytes = helium_pubkey.to_vec();
+
+let solana_pubkey = solana_sdk::pubkey::Pubkey::new(&helium_pubkey_bytes[1..]);
+println!("solana public key: {}", solana_pubkey);
+```
+
+To map a keypair:
+
+```rust
+solana_sdk::signature::Keypair::from_bytes(helium_keypair.secret_to_vec())
+```
+
+You can also get the Solana wallet address from a helium wallet address using the migration api:
+
+`https://migration.web.test-helium.com/helium/*helium-wallet-address*`
+
+### Migration
+
+To migrate wallet(s) to Solana, you can use the migration service. Instead of sending all transactions
+to inflate helium state on Solana during the transition period, transactions are instead processed as needed.
+When a user opens their wallet in the helium wallet app, it requests our migration service to get the
+needed transactions, then submits them to Solana.
 
 Since exchange wallets may not use the wallet app, you can use the service directly:
 
